--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <meta charset="utf-8" />
     <title>Custom Journey Builder Activity</title>
 
-    <script src="https://requirejs.org/docs/release/2.1.5/comments/require.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script> -->
-
-    <script type="text/javascript" src="js/postmonger.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.js"></script> -->
+    <script type="text/javascript" src="js/require.js"></script>
+    <script type="text/javascript" src="js/postmonger.js"></script>
     <script type="text/javascript">
       (function () {
         var config = {
