--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       Select your SMS message:
       <select id="select1">
         <option value="">Select an option</option>
-        <option value="someMessage">1MS</option>
+        <option value="1MS">1MS</option>
         <option value="anotherMessage">Another SMS</option>
         <option value="thirdMessage">Third SMS</option>
         <option value="unknownMessage">Unknown SMS</option>
