--- a/index.html
+++ b/index.html
@@ -1,62 +1,67 @@
 <!DOCTYPE html>
-
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Custom Journey Builder Activity</title>
+<head>
+  <meta charset="utf-8" />
+  <title>Custom Journey Builder Activity</title>
+  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <script type="text/javascript" src="js/require.js"></script>
+  <script type="text/javascript" src="js/postmonger.js"></script>
+  <script type="text/javascript">
+    (function () {
+      var config = {
+        baseUrl: "",
+      };
 
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/require.js"></script>
-    <script type="text/javascript" src="js/postmonger.js"></script>
-    <script type="text/javascript">
-      (function () {
-        var config = {
-          baseUrl: "",
-        };
+      var dependencies = ["customActivity"];
 
-        var dependencies = ["customActivity"];
+      require(config, dependencies);
+    })();
 
-        require(config, dependencies);
-      })();
-    </script>
+    // 버튼 클릭 시 validateStep 함수 호출
+    function triggerValidateStep() {
+      validateStep();
+    }
+  </script>
 
-    <!--Styles-->
-    <style type="text/css">
-      body {
-        padding: 20px;
-        margin: 0;
-      }
-      .step {
-        display: none;
-      }
-      #step1 {
-        display: block;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="step1" class="step">
-      Select your SMS message:
-      <select id="select1">
-        <option value="">Select an option</option>
-        <option value="1MS">1MS</option>
-        <option value="anotherMessage">Another SMS</option>
-        <option value="thirdMessage">Third SMS</option>
-        <option value="unknownMessage">Unknown SMS</option>
-      </select>
+  <!--Styles-->
+  <style type="text/css">
+    body {
+      padding: 20px;
+      margin: 0;
+    }
+    .step {
+      display: none;
+    }
+    #step1 {
+      display: block;
+    }
+  </style>
+</head>
+<body>
+  <div id="step1" class="step">
+    Select your SMS message:
+    <select id="select1">
+      <option value="">Select an option</option>
+      <option value="1MS">1MS</option>
+      <option value="anotherMessage">Another SMS</option>
+      <option value="thirdMessage">Third SMS</option>
+      <option value="unknownMessage">Unknown SMS</option>
+    </select>
 
-      <button id="toggleLastStep">Toggle Last Step</button>
-    </div>
-    <div id="step2" class="step">
-      Here's a second page with some info on it.
-    </div>
-    <div id="step3" class="step">
-      You chose the message:
-      <div id="message"></div>
-    </div>
-    <div id="step4" class="step">
-      Hey, here's a fourth step, just for you. Toggle this on or off from step
-      1.
-    </div>
-  </body>
+    <!-- 수정된 부분: validateStep 함수 호출 버튼 추가 -->
+    <button id="validateButton" onclick="triggerValidateStep()">Validate Step</button>
+    
+    <button id="toggleLastStep">Toggle Last Step</button>
+  </div>
+  <div id="step2" class="step">
+    Here's a second page with some info on it.
+  </div>
+  <div id="step3" class="step">
+    You chose the message:
+    <div id="message"></div>
+  </div>
+  <div id="step4" class="step">
+    Hey, here's a fourth step, just for you. Toggle this on or off from step 1.
+  </div>
+</body>
 </html>
